--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/workspaces/MarsSE/ecf-16035-a/miglayout-4.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
