--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/workspaces/MarsSE/ecf-16035-a/miglayout-4.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/httpd/lib/miglayout-4.0-swing.zip"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
